Fixing bpytop and adding sddm.conf

--- a/dotfiles/hypr/hyprland.conf
+++ b/dotfiles/hypr/hyprland.conf
@@ -21,7 +21,7 @@ monitor=,preferred,auto,auto
 exec-once = waybar
 exec-once = hyprpaper
 exec-once = spotify-launcher
-exec-once = bpytop
+exec-once = kitty -e bpytop
 exec-once = kitty
 
 
